--- a/posts/generate-invoice.mdx
+++ b/posts/generate-invoice.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting Started
-description: Learn how to create and use functions
+title: Generate Invoice on GeM
+description: Learn how to generate invoice on GeM Portal
 thumbnailUrl: '/javascript-functions-thumbnail.jpeg'
 tags: ['Getting Started', 'start']
 ---
