Add google anylatics

--- a/posts/generate-invoice.mdx
+++ b/posts/generate-invoice.mdx
@@ -12,8 +12,8 @@ tags: ['Getting Started', 'start']
 
 <br/>
 
-### This is a Markdown sub-heading
-We just used a `###` subheading in our blog post.
+## Heading {#heading}
+We just used a `##` subheading in our blog post.
 
 <SyntaxHighlighter language="javascript">
   {`
