add copy button

--- a/posts/generate-invoice.mdx
+++ b/posts/generate-invoice.mdx
@@ -12,7 +12,7 @@ tags: ['Getting Started', 'start']
 
 <br/>
 
-## Heading {#heading}
+## Heading
 We just used a `##` subheading in our blog post.
 
 <SyntaxHighlighter language="javascript">
