--- a/posts/getting-started.mdx
+++ b/posts/getting-started.mdx
@@ -12,8 +12,10 @@ tags: ['Getting Started', 'start']
 
 <br/>
 
-### This is a Markdown sub-heading
+## This is a Markdown sub-heading
 We just used a `###` subheading in our blog post.
+
+## This is another heading
 
 <SyntaxHighlighter language="javascript">
   {`
