--- a/posts/Anu.mdx
+++ b/posts/Anu.mdx
@@ -12,7 +12,7 @@ tags: ['Getting Started', 'start']
 
 <br/>
 
-## Anu
+## We are using heading
 We just used a `##` subheading in our blog post.
 
 <SyntaxHighlighter language="javascript">
