add search funcionality

--- a/posts/Anu.mdx
+++ b/posts/Anu.mdx
@@ -22,7 +22,7 @@ We just used a `##` subheading in our blog post.
     }
   `}
 </SyntaxHighlighter>
-
+<addunit />
 ```
   // this is a code block
   const doSomething = () => {
