--- a/posts/getting-started.mdx
+++ b/posts/getting-started.mdx
@@ -14,6 +14,7 @@ tags: ['Getting Started', 'start']
 
 ## This is a Markdown sub-heading
 We just used a `###` subheading in our blog post.
+<addunit />
 
 ## This is another heading
 
