Pre-requisite post

--- a/posts/Pre-requisite.mdx
+++ b/posts/Pre-requisite.mdx
@@ -4,24 +4,29 @@ description: All the required documents for GeM Portal Registration as a buyer o
 ---
 
 We have already know the about the GeM and the benefits of creating an account on GeM. See <Link href="/">What is GeM</Link>.
-## We are here
-Hello guys my name is murad
-### This is my another long heading for testing
-We have already know the about the GeM and the benefits of creating an account on GeM. See <Link href="/">What is GeM</Link>.
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+In this article we are going through the pre-requisite for GeM registration as a seller/service provider.
+## Documents required for GeM Registration
+Here are the list of the documents required for the GeM registration.
 
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-## Here we are using h2
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+### For primary user registration
+- Aadhaar number/ Virtual Id or PAN of the user
+- Mobile number linked with the Aadhar/ Mobile number in case of PAN
+- Active Email Id
+- Documents as per constitution type such as CIN, PAN, DIPP, UAM, ITR details to complete the profile
+- Address details
+- Bank account details
 
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+### Secondry user creation
+- Aadhaar number
+- Mobile number should be linked with Aadhaar
+- Active Email Id
 
-### New h3
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-
-#### one h4
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+## Key notes
+There are some points to remember
+- Registration on GeM should be done by an authorized person (Director of an organization or a key person)
+- Details of the authorized person will get validated  as per the Income Tax Return (ITR) filling
+- Primary seller have an option to create a secondry seller's to assign roles like Bid Participation, Creating of Catalog and Order Fullfillment
+- For MSE, UAM (Udhyog Aadhar Memorandum) and Aadhar/mobile number linked with the same is required
+- For Start Up, DIPP (Department of Industrial Policy and Promotion) number and mobile number linked with the same is required
+- No seperate registration required for Seller and Service provider
+Now you are ready to create your account on the GeM (Government e-Marketplace).
