--- a/posts/Pre-requisite.mdx
+++ b/posts/Pre-requisite.mdx
@@ -1,6 +1,6 @@
 ---
 title: Pre-requisite for GeM Registration
-description: All the required documents for GeM Portal Registration as a buyer or a seller
+description: All the required documents for GeM Portal Registration as a seller or a service provider
 ---
 
 We have already know the about the GeM and the benefits of creating an account on GeM. See <Link href="/">What is GeM</Link>.
@@ -20,6 +20,20 @@ Here are the list of the documents required for the GeM registration.
 - Aadhaar number
 - Mobile number should be linked with Aadhaar
 - Active Email Id
+
+## Optional Documents
+If you want to participate in Bid and your Date of Incorporation is more than 24 months, in
+addition to above mentioned required information, ITR details are required.
+
+**If you are registering as a Start-Up**, in addition to the above-mentioned required information,
+the following will also be needed:
+- DIPP Number
+- Mobile Number linked with DIPP
+
+**If you are registering as an MSE**, in addition to the above-mentioned required information, the
+following will also be needed:
+- UAM Number (Udyog Aadhaar Memorandum Number)
+- Mobile Number linked with UAM
 
 ## Key notes
 There are some points to remember
