--- a/posts/Pre-requisite.mdx
+++ b/posts/Pre-requisite.mdx
@@ -3,7 +3,7 @@ title: Pre-requisite for GeM Registration
 description: All the required documents for GeM Portal Registration as a seller or a service provider
 ---
 
-We have already know the about the GeM and the benefits of creating an account on GeM. See <Link href="/">What is GeM</Link>.
+We have already know about the GeM and the benefits of creating an account on GeM. See <Link href="/">What is GeM</Link>.
 In this article we are going through the pre-requisite for GeM registration as a seller/service provider.
 ## Documents required for GeM Registration
 Here are the list of the documents required for the GeM registration.
