--- a/posts/GeM-registration.mdx
+++ b/posts/GeM-registration.mdx
@@ -51,5 +51,13 @@ Congratulation you have created your GeM Seller account using Aadhaar.
 Now we are going to create an GeM Seller account using PAN.
 
 Follow step 1-8
-9. Select "Personal PAN" in "Authenticate yourself using"
 
+9. Select "Personal PAN" in "Authenticate yourself using"
+10. Enter your PAN details
+11. Once you enter PAN details, the "VERIFY PAN" button will be activated. Click that button to proceed
+12. Enter your mobile number and verify the same with an OTP sent to your number
+13. Once the mobile number us verified, then thick the box to confirm you are the Key Person of the Organisation and click on "NEXT" button
+14. Enter Email Id and click on "SEND OTP" and verify your Email Id
+15. Create your User Id and Password and click on "CREATE ACCOUNT"
+
+Congratulation you have successfully created your GeM Seller account using PAN.
