Add sen=condry user creation post

--- a/posts/Profile-completion.mdx
+++ b/posts/Profile-completion.mdx
@@ -3,7 +3,7 @@ title: Profile Completion on GeM Portal
 description: All the pre requisites and the process of the profile Completion on GeM Portal
 ---
 
-We have created our seller account on the GeM Portal in previous article. You can see all the pre requisites and the steps to create a seller account on the GeM Portal.
+We have created our seller account on the GeM Portal in previous article. You can see all the pre requisites and the steps to create a seller account on the GeM Portal in <Link href="/Gem-registration">this article</Link>.
 Today we are going to complete our profile on GeM so that we can get the orders and participate into the bids. It will only takes 5-10 minutes to 100% profile completion.
 
 ## Pre-requisite For Profile Completion
@@ -25,10 +25,10 @@ Before moving forward let's have a look on the pre-requisites to complete our pr
 
 The profile section is devided into four sections
 
-1. My Company
-2. My Action
-3. Personal Setting
-4. My Team
+1. **My Company**
+2. **My Action**
+3. **Personal Setting**
+4. **My Team**
 
 ### My Company
 
@@ -45,19 +45,19 @@ You can see all the details of the company in this section like PAN, Bank detail
 
 There are five options available in this section
 
-- Vendor Assessment
-- OEM Panel
-- Reseller Pane
-- Change Business or Organisation Type
-- Close Account
+- **Vendor Assessment** : You can manage Vender Assessment from here
+- **OEM Panel** : Manage all the resellers and catalogue from OEM Panel
+- **Reseller Panel** : Manage all the reseller activities from here
+- **Change Business or Organisation Type** : use this section to change the business/organisation type [^note]
+- **Close Account** : use this panel to close your GeM Account
 
 ### Personal Setting
 
 This section has three options
 
-- Change Password
-- Change Email
-- Update Aadhaar
+- **Change Password** : to change your GeM Accounts password
+- **Change Email** : use this panel to change the primary email of your GeM Account
+- **Update Aadhaar** : this panel will help you to update your Aadhaar
 
 ### My Team
 
@@ -73,7 +73,7 @@ Now let's go through the steps to complete the GeM Profile
 4. We have to fill the company details and cilck on the "SAVE" buton to save the details
    in case of business/organisation type is company additional information required is CIN.
 
-after the CIN details and comapny name enter, type of comany and Date of Incorporation will fetch automatically
+After the CIN details and comapny name enter, type of comany and Date of Incorporation will fetch automatically
 
 5. Cilck on the next section i.e. "Company Profile" to proceed further 
 6. Cilck on the options as applicable
@@ -83,3 +83,19 @@ after the CIN details and comapny name enter, type of comany and Date of Incorpo
     - If you want to participate in Bids then click on yes
 
 After filling the all details click on the "SAVE" button.
+
+7. Now it's time to add an office location. (Office registered address is mandatory)
+8. To add a location click on "NEW" button, then enter the all details and verify with your email and click on "CREATE" button to save the details
+Companies and Firms are required to verify key person information as per ITR recoeds
+9. Click "VERIFY COMPANY DETAILS" after filling all details
+10. Now click on the "Bank Accounts" section to proceed further
+11. Fill in the bank account details and click on "SAVE" button
+12. "Tax Assessment" panel will open. Please read the instructions carefully and fill in the ITR Details
+
+Now your profile is 100% completed and My actions, My Team and Personal Settings tabs will get activated
+
+[^note]: You can change the business/organisation type only once
+- Account can only be closed in case no catalogue is uploaded in the account
+- You can view the seller details in Personal Settings > Seller Profile
+- You can change password by going Personal Settings > Change Password
+- You can update the email address by going Personal Settings > Change Email
