new post- seller dashboard

--- a/posts/GeM-registration.mdx
+++ b/posts/GeM-registration.mdx
@@ -3,9 +3,9 @@ title: All abou GeM Portal Registration
 description: All the required steps for GeM Portal Registration as a seller/service provider
 ---
 In previous article we had know the all <Link href="/Pre-requisite">pre-requisite for GeM Registration</Link>.
-Now we are going to create an GeM Seller Account.
+Now we are going to create a GeM Seller Account.
 ## GeM Portal Registration
-Basically there are two ways to registered yourself as a GeM Seller or GeM service provider. these are:
+Basically there are two ways to get registered yourself as a GeM Seller or GeM service provider. these are:
 ### Registration using Aadhaar
 In this proccess you must have your phone number linked with your Aadhaar.
 1. Go to the official website of <Link href="https://gem.gov.in" rel="nooper nofollow" target="_blank">GeM (Government e-Marketplace)</Link>
