--- a/posts/Secondry-user-creation.mdx
+++ b/posts/Secondry-user-creation.mdx
@@ -15,12 +15,46 @@ Enter the Email Id of the users and select roles for him/her[^3]. Then click on 
 
 The activation link will be sent to the secondry user's Email. Open the mail and click on "Verify me now" button.
 
----
-**NOTE**
+<Notes title="Note:" 
+content="If Primary user has registered with PAN, the Secondary user will have to register with PAN. And, If Primary user has registered with Adhaar, the Secondary user will have to register with Aadhaar."/>
 
-It works with almost all markdown flavours (the below blank line matters).
+### Registration using PAN
+If the primary user was registered with the PAN, the secondry user must have to registered with the PAN. Therefore we are going to create a secondry user with the PAN.
 
----
+Enter the required details in "User Account Activation Form" and click on "VERIFY PAN" button. Once the PAN is verified, enter your DOB (Date of Birth) and phone number. Then verify your phone number with the OTP.
+
+Now create your Userid and Password and click on "REVIEW TERMS & CONDITIONS" button. Click on the checkbox to accept their Terms & Conditions and then click on "CREATE ACCOUNT".
+
+You will see a success message, "You have been activated successfully".
+
+### Registration using Aadhaar
+If the primary user was registered with the Aadhaar, the secondry user must have to registered with the Aadhaar. Therefore we are going to create a secondry user with the Aadhaar.
+
+Enter the required details in "User Account Activation Form" and click on "VERIFY AADHAAR" button. You will receive an OTP on mobile number registered with Aadhaar. Enter that and click on "Verify".
+You will see the success message, "Aadhaar verification successful". Fill out the required details and create a Userid and Password for your account and click on "REVIEW TERMS & CONDITIONS".
+
+Click on the checkbox to accept their Terms & Conditions. Click on "CREATE ACCOUNT" button.
+
+You will see a success message, "You have been activated successfully".
+
+After Successfully activating the Secondary User Account,
+the Secondary User can update their profile by logging in to GeM portal with
+their credentials.
+
+### Update the Secondary User's Profile
+Once the secondry user login with his/her credentials, he/she will be able to Change Password, Change Email, and Update Mobile.
+#### Change Password
+Login to your account and go to the My Account > Change Password.
+
+Click on "GET OTP" button to get the OTP for the Password reset process. Fill in the OTP and click on the "VERIFY OTP" button.
+Now set a new Password and click on the "SAVE". Your password is changed successfully.
+#### Change Email
+Go to the My Account > Chnage Email to change your registered Email id.
+Enter the new email id and click on "SEND OTP". Enter the OTP (sent on new email).
+
+#### Update Mobile
+To update the mobile number in the GeM Profile, Go to the My Account > Update Mobile.
+Enter the mobile number and click on "SEND OTP". Enter the OTP and Verify. Your new mobile number is updated on the GeM.
 
 [^1]: You can review the list of users here
 [^2]: You can add secondary user and define roles here
