--- a/posts/Seller-dashboard-overview.mdx
+++ b/posts/Seller-dashboard-overview.mdx
@@ -6,21 +6,75 @@ The Objective is to display the quick snapshot of various entities the seller is
 ## Overview of the Dashboard
 ```
 1. Dashboard:
-    |- Dashboard
-    |- Manage Caution Money Account
-    |- Upload TDS Certificate
+  |- Dashboard
+  |- Manage Caution Money Account
+  |- Upload TDS Certificate
 2. Market
 3. Orders
 4. Bids:
-    |- List of Bids
+  |- List of Bids
 5. Purchase Requisitions
 6. Catalogue:
-    |- Products:
-        |- Search My Offerings
-        |- View All Categories
-    |- Services
-        |- Add New Offering
-        |- Search Offerings
+  |- Products:
+    |- Add New Offering
+    |- Search My Offerings
+    |- View All Categories
+  |- Services
+    |- Add New Offering
+    |- Search Offerings
 ```
 ### Dashboard
-This 
+This section contains three sub menu, 1. Dashboard, 2. Manage Caution Money, 3. Upload TDS Certificate. Let's understand each section in depth.
+
+#### Dashboard
+There are too many things which can be found in the dashboard section like Notification, GeM Stats, Incident etc.
+- **Notifications** : You can see latest STC updates and latest bids in this section.
+- **Summary** : This section is about your seller rating, Number of orders you got yet, Products and Services you are offering, Participated Bid and RA stats, Transaction Charges you paid to GeM, Incidents you created or created in your account.
+- **Orders and Payments** : You can see the total orders and the payments of that order, Order Value/Volume Trend Monthly (Last 12 Months), and Buyer Organisation Wise Order Volume (Last 12 Months).
+- **Bid/RA** : This section is about Bid Statistics. This section will show you, how many bids you participated in, won and lost on the multiple critarea.
+- **Category Insights** : This section will show you the graph insights of the category, ministry and the location of the buyers.
+- **Product and Services** : It is all about your listings stats.
+- **Incident** : Here you can find all Incident in which you are involved.
+- **GeM Stats** : You can see GeM Statistics, Last Six Months Transaction in GeM, Top 10 Category in GeM, Location Wise Transaction.
+- **Reports** : This section will give you the option to download the report of Order, Bid/RA Participated, Incident Detail, Catalog Detail.
+
+### Manage Caution Money
+You must have to submit your Caution Money to start listing your products or services on GeM Portal. You can manage your Caution money from here. You can see a virtual bank account number, ifsc, and Bank name. You have to deposit the amount in the given details.
+
+"Account Balance and Status" will show you the available amount in your account. It gives you three options
+- **Update Balance** : You can update your balance by clicking this button.
+- **Generate Challan and View statement** : You will redirect to an external website by clicking this button. You can view the statement or transsfer the anount to an account.
+- **Withdraw Excess Funds** : You can withdraw excess fund from the Caution money.
+
+### Upload TDS Certificate
+You can search and upload TDS Certificate from this panel.
+
+### Market
+This is the marketplace of the GeM. You can search any product or service by simply searching in the search bar. Or you can also find the product categories wise.
+
+### Orders
+Orders section is all about the orders you received on the GeM. You can view the order, download the contract, generate the invoices, update the delivery details through this section on GeM Portal.
+
+### Bids
+There is only one link in this menu, i.e List of Bids. By clicking on this link you will be redirect to the bidplus on the GeM Portal, where you can see all ongoing Bids/RAs and the status of the participated bids.
+
+### Purchase Requisitions
+This section is about Purchase Requisitions.
+
+### Catalogue
+There are two options available here, one is Products and another one is Services.
+#### Products
+This will allow you to manage all your products. There are three sub menu available in this menu. 1. Add New Offering, 2. Search My Offerings, 3. View All Categories.
+##### Add New Offering
+This link will take you to that page where you can add new listing.
+##### Search My Offerings
+You can see all availbel listings, brand request, drafts, notified catalogue etc.
+##### View All Categories
+You can view all the available categories on the GeM Portal.
+
+#### Services
+This will allow you to manage services on the GeM Portal. There are two sub menu available in this menu. 1. Add New Offering, 2. Search Offerings.
+##### Add New Offering
+You can add new service offering by clicking this link
+##### Search Offerings
+You can search available services on the GeM Portal offered by you and manage them.
