Changes in the last article

--- a/posts/GeM-registration.mdx
+++ b/posts/GeM-registration.mdx
@@ -2,7 +2,7 @@
 title: All abou GeM Portal Registration
 description: All the required steps for GeM Portal Registration as a seller/service provider
 ---
-In previous article we had know the all <Link href="/Pre-requisite">pre-requisite for GeM Registration</Link>.
+In previous article we had know the all <Link href="/pre-requisite">pre-requisite for GeM Registration</Link>.
 Now we are going to create a GeM Seller Account.
 ## GeM Portal Registration
 Basically there are two ways to get registered yourself as a GeM Seller or GeM service provider. these are:
