--- a/posts/Profile-completion.mdx
+++ b/posts/Profile-completion.mdx
@@ -3,7 +3,7 @@ title: Profile Completion on GeM Portal
 description: All the pre requisites and the process of the profile Completion on GeM Portal
 ---
 
-We have created our seller account on the GeM Portal in previous article. You can see all the pre requisites and the steps to create a seller account on the GeM Portal in <Link href="/Gem-registration">this article</Link>.
+We have created our seller account on the GeM Portal in previous article. You can see all the pre requisites and the steps to create a seller account on the GeM Portal in <Link href="/gem-registration">this article</Link>.
 Today we are going to complete our profile on GeM so that we can get the orders and participate into the bids. It will only takes 5-10 minutes to 100% profile completion.
 
 ## Pre-requisite For Profile Completion
