--- a/posts/Secondry-user-creation.mdx
+++ b/posts/Secondry-user-creation.mdx
@@ -2,7 +2,7 @@
 title: Secondry user creation and defining thier roles on GeM Portal
 description: Breifly explain about secondry user create and manage with role basis on GeM Portal
 ---
-We are going to create a secondry user for our GeM account and will assign his/her role. We have created and copleted our profile in <Link href="/Profile-completion">previous articles</Link>.
+We are going to create a secondry user for our GeM account and will assign his/her role. We have created and copleted our profile in <Link href="/profile-completion">previous articles</Link>.
 In this article we are going to create a secondry user and manage his/her role.
 ## Create secondry user
 First login to your GeM Account and go to the profile section.
