--- a/posts/Vendor-assesment.mdx
+++ b/posts/Vendor-assesment.mdx
@@ -2,7 +2,7 @@
 title: All about Vendor Assessment and Exemption on GeM Portal
 description : Learn everything about Vendor Assessment and Vendor Assessment Exemption on the GeM (Government e-Marketplace) Portal
 ---
-The term Vendor Assessment same as other E-Commerce platform like, for Flipkart, It's F-Assured.
+The term Vendor Assessment same as other E-Commerce platform like, Flipkart has F-Assured.
 ## What is Vendor Assessment
 **Vendor Assessment** is mandatory for all the sellers on GeM. In this article we will understand abou **Vendor Assessment** and **Vendor Assessment Exemption** on the GeM Portal.
 ### Key notes on Vendor Assessment
@@ -33,6 +33,6 @@ Next tab will be "Financial Details". Then financial details are auto fetched by
 
 Payments tab will open. Now you have to pay the sum[^3] to get your form submitted. 
 
-[^1] : You need to enter the categories in which you want Vendor Assessment
-[^2] : You can apply for multiple categories at same time. You need to click "ADD ROW" button to add one more category
-[^3] : You can pay the amount online like other marketplace
+[^1]: You need to enter the categories in which you want Vendor Assessment
+[^2]: You can apply for multiple categories at same time. You need to click "ADD ROW" button to add one more category
+[^3]: You can pay the amount online like other marketplace
