vendor assessment post complete

--- a/posts/vendor-assesment.mdx
+++ b/posts/vendor-assesment.mdx
@@ -27,12 +27,49 @@ Select format type for Vendor Assessment as "Manufacturers or OEMs". Click on "I
 A pre filled form with seller information will oepn. You just need to enter additional mobile number and additional email. Now proceed by clicking on "SAVE & PROCEED" button.
 
 The bank details will also auto fetched by the system, you just need to proceed.
-Category Details tab will open. Enter the categories[^1][^2]. In "SOLD DETAILS" tab, enter previous order's details and proceed.
+Category Details tab will open. Enter the categories [^1] [^2]. In "SOLD DETAILS" tab, enter previous order's details and proceed.
 
 Next tab will be "Financial Details". Then financial details are auto fetched by the system so you just need to proceed.
 
-Payments tab will open. Now you have to pay the sum[^3] to get your form submitted. 
+Payments tab will open. Now you have to pay the sum [^3] to get your form submitted.
+
+You can view your request in the Assessment Tab [^4].
+
+## Steps to get Vendor Assessment Exemption
+Now let's see how to get **Vendor Assessment Exemption**. But before going forward, first let's see who is able to get vendor assessment exemption.
+
+- Sellers having annual turnover of Rs 500 Crore or more, at least in one of the latest three years as captured during registration
+- Central / State PSUs
+- All sellers who are validated through, PAN or GSTN or MCA-21 and offering products of offer price Rs.25,000 per unit. and whose annual transaction value in GeM is not more than Rs.5,00,000. Sellers who are offering products as OEM shall not be covered under this exemption
+- Sellers offering products like Artwork, handicrafts, and other such items where, there is no standard manufacturing process exists. The exempted categories shall be specified by the category owner
+- Sellers who are Registered Societies/ Trusts/ other bodies, if these concerns have Government Representation
+- KVIC, WDO, Coir Board, TRIFED
+- OEMs who are registered with NSIC (for the category for which registration was obtained). This exemption will be coterminous with NSIC certificate validity
+- OEMs holding BIS License for the particular product category which are validated through BIS database. Normal validity for this exemption will be three years. Seller is mandated to notify GeM in case cancellation of BIS license and exemption will be withdrawn
+-  OEMs having Unique Certification Code (UCC) issued by DRDO/ OFB/ SITRA. This exemption will be coterminous with UCC certificate validity
+- Sellers recommended for exemption for specific categories and specified validity period by any CPSE, Central and State Government Departments/ Authorities
+- Any other category of sellers as notified with the approval of CEO-GeM
+
+If you fall under the Exemption Category click on Assessment Exemption Tab and click on "CREATE EXEMPTION REQUEST" button to proceed.
+
+Select the format for vendor assessment exemption which is applicable to you and proceed with the button.
+
+Upload the supporting document/certificate and submit
+
+Your Vendor Assessment Exemption request has been created. Please note down the request ID for future reference
+
+You can view your vendor assessment exemption request in "ASSESSMENTS EXEMPTIONS" tab.
+
+## QCI's role Post Vendor Assessment Submission
+- The Vendor Assessment will be assigned to QCI with a unique assessment number and will be visible in their Vendor Assessment Panel on GeM
+- QCI will then initiate the assessment by sending an e-mail to the seller’s registered e-mail id detailing the process of assessment along with log in credentials and update the status as pass/fail of assessment after completing the Vendor Assessment as per current process by digitally sending the parameters of the report and a PDF link of the report for the seller
+- QCI will also verify those sellers who have applied for exemption and mark their status as Pass/Fail in GeM through their Vendor Assessment Panel
+- The Vendor Assessment will be consumed by GeM as per current process
+### Vendor assessment is carried out by QCI n 2 stages:
+1. **Desktop Assessment** - Information and documents are submitted by the vendor and if any discrepancy is found then non-compliance (NC)would be raised
+2. **Video Assessment** - Video Assessment is conducted by an expert using the mobile based application through video calling. It will validate the entire process submitted by the vendor through documents in Desktop Assessment.
 
 [^1]: You need to enter the categories in which you want Vendor Assessment
 [^2]: You can apply for multiple categories at same time. You need to click "ADD ROW" button to add one more category
 [^3]: You can pay the amount online like other marketplace
+[^4]: After you apply for assessment, an e-mail is sent to your registered e-mail id from gem.admin@qcin.org detailing the process of assessment along with the link and log in credentials to start the process. Please check your e-mail to initiate the process of assessment.
