catalogue management product post edited

--- a/posts/catalogue-management-products.mdx
+++ b/posts/catalogue-management-products.mdx
@@ -6,12 +6,96 @@ The Catalogue Management System enables the Sellers & Service providers to broad
 
 In this article we will go through the all process required to **list your product on the GeM Portal**. These are:
 1. **Category Creation**
-2. **Adding the Brand Name**
-3. **Clone Existing Catalogue**
-4. **Edit the Catalogue**
+2. **Adding Brand Name**
+3. **Add new Listing**
+4. **Clone Existing Catalogue**
+5. **Edit the Catalogue**
+
 Before we get started, first you may check <Link href="/profile-completion">Profile Completion</Link> articles to complete your GeM Profile. Because, without completing your profile, you can't list any product or service on GeM Portal. And for better understanding of the seller dashboard, you may read <Link href="/seller-dashboard-overview">Seller Dashboard Overview</Link> article.
 
 ## Category Creation
-**There are 9877 categories are available on the GeM Portal**, but sometime we can't get the right one for our product. Therefore we are starting with **Creating a New Category on GeM Portal**.
+**There are more than 10000 categories are available on the GeM Portal**, but sometime we can't get the right one for our product. Therefore we are starting with **Creating a New Category on GeM Portal**.
 
-Login to the GeM with your UserId and Password and *Catalogue* link on the header. Hover (Move your mouse) on that link, you will see two option, one is Products and another one is Services. Again hover on the Products link and then click on *Add New Offering*.
+Login to the GeM with your UserId and Password and find the *Catalogue* link on the header. Hover (Move your mouse) on that link, you will see two option, one is Products and another one is Services. Again hover on the Products link and then click on "*Add New Offering*".
+
+The new listing creation page will open. Left side you can see the category search option. Simply you can just search your category. You can get the available category matching with your search (if available).
+
+If you are unable to find the right one for your product, then click on "*Cannot find a suitable category? Click here to submit a request for creation of a new category or to suggest changes in an existing category*" link to create one.
+
+Request Management tab will popup. You can create a request from here. Select "*Request type*" as "*New category creation*". Fill the description and upload the supporting document and click on "*Generate Request*" button.
+
+### Update in the existing category
+To update or suggest any change in the existing category, you may select "*Request for Category Up-gradation*". Enter the description and upload supporting document and click on the "*Generate Request*" button.
+
+You can check the status of the request created by you by clicking on the "*View My Request*" button.
+
+## Adding Brand Name
+There are two ways available for a newly added seller to list his/her product on the GeM Portal, one is to list product on **Unbranded** and second one is to **Add their own Brand**. Brand name creation is very simple process on the GeM Portal than other Marketplace like Amazon or Flipkart.
+
+### Key notes
+- You can submit a request for new brand as well OEM Dashboard for an existing brand through this functionality Please read the Guidelines document to know the mandatory requirements for brand creation and OEM Dashboard
+- Once the request is submitted, it will be processed by the GeM Brand Approval team. It usually takes about 7 days for the approval team to review the request. They may ask for additional information on the request during this time
+- You can track the status of your request from the Brand /OEM Requests tab on your dashboard. Please note, if you don’t have any website link to enter in the link section, please enter NA
+- Furnishing wrong/misleading/spurious information will lead to rejection of your request.For Unregistered and Unbranded products, the catalog uploaded will be sent to the product approval team. Only once it is approved by them, the product is published in the market. In Registered brand case, the product is auto published in the market
+
+### Document Guidelines
+#### Applying for Brand
+You can upload one of the following documents as supporting documents for your brand application:
+- Trademark Registration Proof: This can be obtained from the IP India website at https://ipindiaonline.gov.in/tmrpublicsearch/frmmain.aspx by entering brand name and choosing relevant class. The Class should be relevant to the GeM Category in which you are applying the brand. Download and attach the report from the website or attach a screenshot showing brand name and class with the request to submit as proof
+- Trademark Certificate: Copy of the trademark registration certificate
+- OEM Authorization letter: If you are not the OEM of the brand, you can submit a letter on the OEM's letterhead clearly mentioning the brand name and authorization given to you by OEM to transact in the brand's products. OEM's contact details like contact person, email (on OEM domain) should be included on the letter
+- Govt. Order copy: Scanned copies of any Government orders you have fulfilled in the past showing the products of the brand as order items. The brand name should be clearly visible on the order document
+- Other Documentary Evidence: Any other documentary evidence to prove brand existence
+
+#### Applying for OEM Dashboard
+Please ensure that your Vendor Assessment is Verified in the category for which you are applying to be OEM
+The following documents can be uploaded if you are also applying for OEM Dashboard:
+- Trademark Certificate (mandatory):
+    - Trademark Status should be **Registered**
+    - **Trademark Class** should match the category in which you are applying for OEM Dashboard.
+       You can verify the class on the IP India website. <Link href="https://ipindiaonline.gov.in/tmrpublicsearch/classfication_goods_service.htm" rel="nooper nofollow" target="_blank">Click here</Link> 
+    - Brand on Trademark Certificate should match the brand for which you are applying for OEM Dashboard
+    - Organization name on Trademark Certificate should match organization name on GeM
+- Deemed OEM Letter (optional): If the OEM of your brand does not sell directly in India, but the OEM has authorized your company to represent the brand in India, you can apply to be the Deemed OEM for the brand. Kindly upload a signed and stamped Deemed OEM Letter (<Link href="https://assets-bg.gem.gov.in/resources/pdf/Deemed_OEM_undertaking.pdf" target="_blank">download prescribed format</Link>) on OEM’s letterhead. Please note that the Trademark Certificate is still mandatory.
+
+### Applying
+Go to the *Catalogue > Products > Add New Offering*. Find the category in which you want to add your brand. New listing tab will be open. You can find *COULDN'T FIND YOUR BRAND ? CLICK HERE TO ADD* link. Click on the link to create a new request.
+
+#### 1. Having a Registered Trademark
+Select type of Request as *We own Registered Trademark for a Brand*, enter the brand name and click on *confirm* and then *PROCEED*.
+
+- Enter the link to the Brand's website
+- Upload the documents
+- If you want to apply for priority processing, then select *Yes* and enter the valid bid number
+- Click on *APPLY FOR BRAND*
+
+#### 2. Having a brand name but no a Registered Trademark
+Select type of Request as *We are owner of a Brand but do not have Registered trademark*, enter the brand name and click on *confirm* and then *PROCEED*.
+- Follow the above steps (You only have to change the documents from first scenario, i.e OEM undertaking Letter). For more details please read <Link href="#document-guidelines">documents guidelines</Link>
+
+#### 3. Haven't brand and want to apply for OEM Dashboard
+Select type of Request as *We do not own any Brand and want to apply for OEM dashboard without Brand*, enter the brand name and click on *confirm* and then *PROCEED*.
+- Follow the first scenario's steps (You only have to change the documents from first scenario). For more details please read <Link href="#document-guidelines">documents guidelines</Link>
+
+Once the request is submitted, you can track the request status in the Brand/OEM Requests option under the “Published” tab.
+
+## Add new Listing
+Once the brand name is added successfully, you can add your first listing with your brand. Just go to *Catalogue > Products > Add New Offering* and follow the steps:
+- Find the category
+- Select your brand
+- Enter the Golden Parameters specifications
+- Upload the necessary documents
+- Upload the Images
+- Save
+
+Once the new listing creation request will successfully submitted, you can track the status of the request in "Waiting for admin clearance" section under "Published" tab.
+
+## Clone Existing Catalogue
+This functionality has been introduced to quickly create copies of existing catalogs where all specifications except a few have the same values. There are too many listings already available on the GeM portal with the same specifications. You can simply clone any listings. Simply go to the new listing creation page and enter your brand name.
+You need a link of the product or product id of the product you want to clone. Under the *Clone Catalogue specifications* enter the product id and submit. On clicking submit, all the specifications from the existing catalog will be copied to the new catalog (Golden and Non-Golden Parameters) 
+- Upload the necessary documents
+- Upload the Images
+- Save
+
+## Edit the Catalogue
+Go to the Published tab, and find the edit icon.
